--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "@nrwl/jest": "15.2.0",
     "@nrwl/linter": "15.2.0",
     "@nrwl/nest": "15.2.0",
-    "@nrwl/node": "15.2.0",
+    "@nrwl/node": "^15.2.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.2.0",
     "@nrwl/web": "15.2.0",
     "@nrwl/workspace": "15.2.0",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "18.7.1",
+    "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
