--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test"
+    "start": "nx run-many --target=serve --projects=client,server",
+    "build": "nx run-many --target=build --projects=client,server",
+    "test": "nx run-many --target=test --projects=client,server",
+    "lint": "nx run-many --target=lint --projects=client,server"
   },
   "private": true,
   "dependencies": {
