--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test:
+  Run-Test:
 
     runs-on: ubuntu-latest
 
@@ -27,7 +27,7 @@ jobs:
     - run: npm run build --if-present
     - run: npm test
     
-  lint:
+  Run-Lint:
 
     runs-on: ubuntu-latest
 
