--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,7 @@ jobs:
             - 'server/**'
           frontend:
             - 'client/**'
+    - name: Install
     - run: npm ci
     - run: npm run build --if-present
     # run only if 'backend' files were changed
