--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,13 +1,15 @@
-name: Node.js CI
+name: Client CI
 
 on:
   push:
     branches: [ "main" ]
+    paths: [ "client"] 
   pull_request:
     branches: [ "main" ]
+ 
 
 jobs:
-  Run-Test:
+  Run-Client-Test:
 
     runs-on: ubuntu-latest
 
@@ -18,30 +20,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: dorny/paths-filter@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
-      id: filter
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        filters: |
-          backend:
-            - 'server/**'
-          frontend:
-            - 'client/**'
+
     - name: Install
     - run: npm ci
-    - run: npm run build --if-present
-    # run only if 'backend' files were changed
-    - name: backend tests
-      if: steps.filter.outputs.server == 'true'
-    - run: npm run backend-test
-    - run: npm run backend-test:e2e
-    # run only if 'frontend' files were changed
-    - name: frontend tests
-      if: steps.filter.outputs.client == 'true'
-      run:  npm run front-end-test
+    - run: npm run front-end-test
 
     
   Run-Lint:
@@ -62,4 +46,4 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run lint
+    - run: npm run front-end-lint
