--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,8 +22,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
-
-    - name: Install
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        
     - run: npm ci
     - run: npm run front-end-test
 
@@ -43,7 +45,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'npm'5
+        
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run front-end-lint
