--- a/.github/workflows/Client-CI.yml
+++ b/.github/workflows/Client-CI.yml
@@ -3,7 +3,7 @@ name: Client CI
 on:
   push:
     branches: [ "main" ]
-    paths: [ "client"] 
+    paths: [ "client/**"] 
   pull_request:
     branches: [ "main" ]
  
