--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx run-many --target=serve --projects=client,server",
+    "dev": "nx run-many --target=serve --projects=client,server",
     "build": "nx run-many --target=build --projects=client,server",
     "test": "nx run-many --target=test --projects=client,server",
     "front-end-test": "nx test client",
     "back-end-test": "nx test server",
     "lint": "nx run-many --target=lint --projects=client,server",
     "front-end-lint": "nx lint client",
-    "back-end-lint": "nx lint client"
+    "back-end-lint": "nx lint client",
+    "storybook:atoms": "nx run atoms:storybook",
+    "storybook:client": "nx run client:storybook"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +30,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "7.12.13",
+    "@babel/preset-typescript": "7.12.13",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "15.2.0",
@@ -39,8 +43,16 @@
     "@nrwl/node": "^15.2.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.2.0",
+    "@nrwl/storybook": "15.2.1",
     "@nrwl/web": "15.2.0",
     "@nrwl/workspace": "15.2.0",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/builder-webpack5": "~6.5.9",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/manager-webpack5": "~6.5.9",
+    "@storybook/react": "~6.5.9",
+    "@storybook/test-runner": "^0.7.2",
+    "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.18",
@@ -49,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
+    "babel-loader": "8.1.0",
     "cypress": "^11.0.0",
     "eslint": "~8.15.0",
     "eslint-config-next": "13.0.0",
@@ -64,8 +77,11 @@
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "sass": "1.55.0",
+    "storybook-addon-next": "^1.6.6",
+    "storybook-addon-swc": "^1.1.7",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "url-loader": "^3.0.0"
   }
 }
