--- a/.github/workflows/Client-CI.yml
+++ b/.github/workflows/Client-CI.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         
-    - run: npm ci --force
+    - run: npm ci
     - run: npm run build --if-present
     - run: npm run front-end-test
 
@@ -48,6 +48,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         
-    - run: npm ci --force
+    - run: npm ci
     - run: npm run build --if-present
     - run: npm run front-end-lint
