--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/axios": "^1.0.0",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/terminus": "^9.1.3",
     "@nrwl/next": "15.2.0",
     "core-js": "^3.6.5",
     "next": "13.0.0",
@@ -27,6 +30,7 @@
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
+    "supertest": "^6.3.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -54,7 +58,7 @@
     "@storybook/test-runner": "^0.7.2",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/react": "13.4.0",
-    "@types/jest": "28.1.1",
+    "@types/jest": "^28.1.8",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
