--- a/apps/client/.storybook/tsconfig.json
+++ b/apps/client/.storybook/tsconfig.json
@@ -8,7 +8,8 @@
     "../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts",
     "../../../node_modules/@nrwl/react/typings/cssmodule.d.ts",
     "../../../node_modules/@nrwl/react/typings/image.d.ts",
-    "../../../.storybook/main.ts"
+    "../../../.storybook/main.ts",
+    "../components/health/DisplayHealth.tsx"
   ],
 
   "exclude": [
