--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -12,6 +12,7 @@
     "incremental": true,
     "declaration": true,
     "composite": true,
+    "disableReferencedProjectLoad": true,
     "outDir": "dist",
     "types": ["jest", "node"],
     "noEmit": false
