--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -14,7 +14,7 @@
     "composite": true,
     "disableReferencedProjectLoad": true,
     "outDir": "dist",
-    "types": ["jest", "node"],
+    "types": ["jest", "node", "@testing-library/jest-dom"],
     "noEmit": false
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js", "**/*.jsx", "next-env.d.ts"],
