--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@storybook/react": "~6.5.9",
     "@storybook/test-runner": "^0.7.2",
     "@svgr/webpack": "^5.4.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/jest": "^28.1.8",
     "@types/node": "18.7.18",
