--- a/.github/workflows/Server-CI.yml
+++ b/.github/workflows/Server-CI.yml
@@ -47,6 +47,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         
-    - run: npm ci --force
+    - run: npm i --force
     - run: npm run build --if-present
     - run: npm run back-end-lint
