--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/terminus": "^9.1.3",
     "@nrwl/next": "15.2.0",
     "core-js": "^3.6.5",
+    "helmet": "^6.0.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
