--- a/.github/workflows/Client-CI.yml
+++ b/.github/workflows/Client-CI.yml
@@ -1,11 +1,8 @@
 name: Client CI
 
 on:
-  push:
-    branches: ['main']
-    paths: ['client/**']
-  pull_request:
-    branches: ['main']
+  paths:
+    - apps/client/**
 
 jobs:
   Run-Client-Test:
