--- a/package.json
+++ b/package.json
@@ -22,17 +22,20 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/terminus": "^9.1.3",
+    "@nestjs/typeorm": "^9.0.1",
     "@nrwl/next": "15.2.0",
     "core-js": "^3.6.5",
     "helmet": "^6.0.0",
     "next": "13.0.0",
+    "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "supertest": "^6.3.1",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.10"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
