--- a/.github/workflows/Server-CI.yml
+++ b/.github/workflows/Server-CI.yml
@@ -9,7 +9,7 @@ env:
   PORT: 3333
   ALLOWED_ORIGIN_CLIENT: "http://localhost:3333"
   ALLOWED_ORIGIN_Server: "http://localhost:4200"
-  DB_HOST: 'localhost'
+  DB_HOST: 'postgres'
   DB_PORT: 5432
   DB_PASSWORD: 'postgres'
   DB_DATABASE: 'postgres'
