--- a/apps/client/.storybook/tsconfig.json
+++ b/apps/client/.storybook/tsconfig.json
@@ -19,11 +19,11 @@
     "../**/*.spec.jsx"
   ],
   "include": [
-    "../components/**/*.stories.ts",
-    "../components/**/*.stories.js",
-    "../components/**/*.stories.jsx",
-    "../components/**/*.stories.tsx",
-    "../components/**/*.stories.mdx",
+    "../src/**/*.stories.ts",
+    "../src/**/*.stories.js",
+    "../src/**/*.stories.jsx",
+    "../src/**/*.stories.tsx",
+    "../src/**/*.stories.mdx",
     "*.tsx",
     "*.js"
   ]
