--- a/apps/client/.storybook/tsconfig.json
+++ b/apps/client/.storybook/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
-    "outDir": "dist"
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "outDir": "dist",
+
   },
   "files": [
     "../../../node_modules/@nrwl/react/typings/styled-jsx.d.ts",
