--- a/libs/atoms/.storybook/tsconfig.json
+++ b/libs/atoms/.storybook/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "outDir": ""
   },
   "files": [
