--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "storybook:atoms": "nx run atoms:storybook",
     "storybook:client": "nx run client:storybook",
     "typeormSrc": "typeorm-ts-node-esm -d ./apps/server/src/app/typeOrm.config.ts",
-    "typeorm": "typeorm-ts-node-esm "
+    "typeorm": "typeorm-ts-node-esm",
+    "build-storybook": "nx run-many --target=build-storybook --projects=atoms,client ",
+    "deployAtoms": "npx chromatic --project-token=9636c4759bd6",
+    "chromatic": "deployAtom --exit-zero-on-changes"
+  }
   },
   "private": true,
   "dependencies": {
@@ -73,6 +77,7 @@
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
     "babel-loader": "8.1.0",
+    "chromatic": "^6.17.0",
     "cypress": "^11.0.0",
     "eslint": "~8.15.0",
     "eslint-config-next": "13.0.0",
@@ -94,5 +99,7 @@
     "ts-node": "^10.9.1",
     "typescript": "~4.8.2",
     "url-loader": "^3.0.0"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "task-manager@0.0.0"
 }
