--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "typeorm": "typeorm-ts-node-esm",
     "build-storybook": "nx run-many --target=build-storybook --projects=atoms,client ",
     "deployAtoms": "npx chromatic --project-token=9636c4759bd6",
-    "chromatic": "deployAtom --exit-zero-on-changes"
+    "chromatic": "deployAtoms --exit-zero-on-changes"
   },
   "private": true,
   "dependencies": {
