--- a/.github/workflows/Storybook-CI.yml
+++ b/.github/workflows/Storybook-CI.yml
@@ -6,6 +6,10 @@ name: 'AtomChromatic'
 # Event for the workflow
 on: push
 
+defaults:
+  run:
+    working-directory: workspace
+
 # List of jobs
 jobs:
   chromatic-deployment:
@@ -13,16 +17,17 @@ jobs:
     runs-on: ubuntu-latest
     # Job steps
     steps:
-      - uses: actions/checkout@v1
-      - name: Install dependencies
-        # 👇 Install dependencies with the same package manager used in the project (replace it as needed), e.g. yarn, npm, pnpm
-        run: npm ci --force
-        # 👇 Adds Chromatic as a step in the workflow
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Install dependencies and build
+        run: |
+          npm ci
+          npm run build-buoy
       - name: Publish to Chromatic
         uses: chromaui/action@v1
-        # Chromatic GitHub Action options
         with:
-          # 👇 Chromatic projectToken, refer to the manage page to obtain it.
-          projectToken: ${{ secrets.CHROMATIC_TASKMANAGER_ATOMS_TOKEN }}
+          workingDir: workspace
+          projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           exitZeroOnChanges: true
-          workingDir: ./
