--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "storybook:client": "nx run client:storybook",
     "typeormSrc": "typeorm-ts-node-esm -d ./apps/server/src/app/typeOrm.config.ts",
     "typeorm": "typeorm-ts-node-esm",
-    "build-storybook": "nx run-many --target=build-storybook --projects=atoms,client --exit-zero-on-changes -d storybook-static/",
+    "build-storybook": "nx run-many --target=build-storybook --projects=atoms,client",
     "deployAtoms": "npx chromatic --project-token=9636c4759bd6",
     "chromatic": "deployAtoms --exit-zero-on-changes"
   },
