--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -2,6 +2,11 @@
   "extends": "../../tsconfig.base.json",
   "files": [],
   "include": [],
+  "compilerOptions": {
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false
+  },
   "references": [
     {
       "path": "./tsconfig.app.json"
