--- a/apps/server/tsconfig.app.json
+++ b/apps/server/tsconfig.app.json
@@ -5,6 +5,8 @@
     "module": "commonjs",
     "types": ["jest", "node"],
     "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "target": "es2015"
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
