--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,8 +7,10 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
