--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,9 +21,10 @@
     "typeormSrc": "typeorm-ts-node-esm -d src/typeOrm.config.ts",
     "typeorm": "typeorm-ts-node-esm",
     "run-migration": "yarn typeormSrc -- migration:run",
-    "gm": "yarn typeormSrc migration:generate",
-    "gs": "yarn typeormSrc migration:show",
-    "gc": "yarn typeorm -- migration:create ./src/migrations/mig"
+    "generate-migration": "yarn typeormSrc migration:generate",
+    "show-migration": "yarn typeormSrc migration:show",
+    "create-migration": "yarn typeorm -- migration:create ./src/migrations/mig",
+
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
