--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "deployStorybook": "npx chromatic --project-token=9636c4759bd6",
+    "chromatic": "deployAtoms --exit-zero-on-changes"
   },
   "dependencies": {
     "@types/node": "18.15.11",
