--- a/.github/workflows/Storybook-CI.yml
+++ b/.github/workflows/Storybook-CI.yml
@@ -27,7 +27,7 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         # 👇 Install dependencies with the same package manager used in the project (replace it as needed), e.g. yarn, npm, pnpm
-        run: npm ci --force
+        run: yarn
         # 👇 Adds Chromatic as a step in the workflow
       - name: Publish to Chromatic
         uses: chromaui/action@v1
