--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -32,6 +32,7 @@
     "@storybook/nextjs": "7.0.2",
     "@storybook/react": "7.0.2",
     "@storybook/testing-library": "0.0.14-next.2",
+    "chromatic": "^6.17.3",
     "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
     "storybook": "7.0.2"
