--- a/.github/workflows/Storybook-CI.yml
+++ b/.github/workflows/Storybook-CI.yml
@@ -1,9 +1,7 @@
 # .github/workflows/chromatic.yml
 
 # Workflow name
-name: 'AtomChromatic'
-
-
+name: 'Chromatic'
 on:
   push:
    paths:
@@ -30,7 +28,7 @@ jobs:
         run: yarn
         # 👇 Adds Chromatic as a step in the workflow
       - name: Publish to Chromatic
-        uses: chromaui/action-next@v1
+        uses: chromaui/action@v1
         # Chromatic GitHub Action options
         with:
           # 👇 Chromatic projectToken, refer to the manage page to obtain it.
