--- a/.github/workflows/Client-CI.yml
+++ b/.github/workflows/Client-CI.yml
@@ -23,8 +23,8 @@ jobs:
           cache: 'npm'
 
       - run: yarn
-      - run: lerna run build --if-present
-      - run: lerna run lint --scope=client
+      - run: npx lerna run build
+      - run: npx lerna run lint --scope=client
 
   Run-Lint:
     runs-on: ubuntu-latest
@@ -43,5 +43,5 @@ jobs:
           cache: 'npm'
 
       - run: yarn
-      - run: lerna run build --if-present
-      - run: lerna run lint lint --scope=client
+      - run: npx lerna run build
+      - run: npx lerna run lint lint --scope=client
