--- a/.github/workflows/Storybook-CI.yml
+++ b/.github/workflows/Storybook-CI.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         # 👇 Install dependencies with the same package manager used in the project (replace it as needed), e.g. yarn, npm, pnpm
         run: yarn
+        # 👇 Change folder
+      - name: Target folder
+        run: cd packages/client
         # 👇 Adds Chromatic as a step in the workflow
       - name: Publish to Chromatic
         uses: chromaui/action@v1
