--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,6 +35,22 @@
     "chromatic": "^6.17.3",
     "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
-    "storybook": "7.0.2"
+    "storybook": "7.0.2",
+    "eslint": "~8.15.0",
+    "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
+    "eslint-plugin-react": "7.31.8",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "28.1.1",
+    "prettier": "^2.6.2",
+    "react-test-renderer": "18.2.0",
+    "babel-jest": "28.1.1",
+    "babel-loader": "8.1.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@types/jest": "^28.1.8"
   }
 }
