--- a/.github/workflows/Server-CI.yml
+++ b/.github/workflows/Server-CI.yml
@@ -66,5 +66,5 @@ jobs:
           cache: 'npm'
 
       - run: yarn
-      - run: npx lerna build --if-present
+      - run: npx lerna build --scope=server
       - run: npx lerna lint --scope=server
