--- a/.github/workflows/Server-CI.yml
+++ b/.github/workflows/Server-CI.yml
@@ -7,8 +7,8 @@ on:
 
 env:
   PORT: 3333
-  ALLOWED_ORIGIN_CLIENT: "http://localhost:3333"
-  ALLOWED_ORIGIN_Server: "http://localhost:4200"
+  ALLOWED_ORIGIN_CLIENT: "http://localhost:3000"
+  ALLOWED_ORIGIN_Server: "http://localhost:3333"
   DB_HOST: 'postgres'
   DB_PORT: 5432
   DB_PASSWORD: 'postgres'
@@ -54,7 +54,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
