--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,59 +24,59 @@
     "generate-migration": "yarn typeormSrc migration:generate",
     "show-migration": "yarn typeormSrc migration:show",
     "create-migration": "yarn typeorm -- migration:create ./src/migrations/mig"
-
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "@nestjs/axios": "^1.0.0",
+    "@nestjs/cli": "^9.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
     "@nestjs/swagger": "^6.2.1",
     "@nestjs/terminus": "^9.1.3",
-    "@nestjs/typeorm": "^9.0.1",
-    "bcrypt": "^5.1.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "core-js": "^3.6.5",
-    "helmet": "^6.0.0",
-    "next": "13.0.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "pg": "^8.8.0",
-    "rxjs": "^7.0.0",
-    "tslib": "^2.3.0",
-    "typeorm": "^0.3.10",
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "core-js": "^3.6.5",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "helmet": "^6.0.0",
     "jest": "29.3.1",
+    "next": "13.0.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.8.0",
     "prettier": "^2.3.2",
+    "rxjs": "^7.0.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.10",
     "typescript": "^4.7.4"
   },
   "jest": {
