--- a/.github/workflows/Server-CI.yml
+++ b/.github/workflows/Server-CI.yml
@@ -68,3 +68,23 @@ jobs:
       - run: yarn
       - run: npx lerna run build --scope=server
       - run: npx lerna run lint --scope=server
+
+  Run-Test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [ 16.x, 18.x ]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - run: yarn
+      - run: npx lerna run build --scope=server
+      - run: npx lerna run test --scope=server
