--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "deployStorybook": "npx chromatic --project-token=9636c4759bd6",
@@ -18,12 +19,14 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "jest-environment-jsdom": "^29.5.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@storybook/addon-essentials": "7.0.2",
     "@storybook/addon-interactions": "7.0.2",
     "@storybook/addon-links": "7.0.2",
@@ -32,10 +35,12 @@
     "@storybook/nextjs": "7.0.2",
     "@storybook/react": "7.0.2",
     "@storybook/testing-library": "0.0.14-next.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@types/jest": "^28.1.8",
+    "babel-jest": "28.1.1",
+    "babel-loader": "8.1.0",
     "chromatic": "^6.17.3",
-    "sass": "^1.61.0",
-    "sass-loader": "^13.2.2",
-    "storybook": "7.0.2",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
@@ -45,10 +50,8 @@
     "jest": "28.1.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
-    "babel-jest": "28.1.1",
-    "babel-loader": "8.1.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@types/jest": "^28.1.8"
+    "sass": "^1.61.0",
+    "sass-loader": "^13.2.2",
+    "storybook": "7.0.2"
   }
 }
