--- a/.github/workflows/Server-CI.yml
+++ b/.github/workflows/Server-CI.yml
@@ -14,6 +14,8 @@ env:
   DB_PASSWORD: 'postgres'
   DB_DATABASE: 'postgres'
   DB_USER: 'postgres'
+  SECRET_KEY: SECRET
+  BCRYPT_ROUNDS: 10
 
 jobs:
   # Label of the container job
