--- a/.github/workflows/Server-CI.yml
+++ b/.github/workflows/Server-CI.yml
@@ -35,6 +35,11 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+          DB_HOST: 'postgres'
+          DB_PORT: 5432
+          DB_PASSWORD: 'postgres'
+          DB_DATABASE: 'postgres'
+          DB_USER: 'postgres'
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
