--- a/.github/workflows/Server-CI.yml
+++ b/.github/workflows/Server-CI.yml
@@ -95,4 +95,5 @@ jobs:
 
       - run: yarn
       - run: npx lerna run build --scope=server
+      - run: npx lerna run run-migration
       - run: npx lerna run test --scope=server
