--- a/.github/workflows/Server-CI.yml
+++ b/.github/workflows/Server-CI.yml
@@ -51,14 +51,34 @@ jobs:
           --health-retries 5
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
+    - name: Check out repository code
+      uses: actions/checkout@v3
+
+      # Performs a clean installation of all dependencies in the `package.json` file
+      # For more information, see https://docs.npmjs.com/cli/ci.html
+    - name: Install dependencies
+      run: yarn ci
+
+    - name: Connect to PostgreSQL
+        # Runs a script that creates a PostgreSQL table, populates
+        # the table with data, and then retrieves the data.
+      run: node client.js
+        # Environment variables used by the `client.js` script to create a new PostgreSQL table.
+      env:
+          # The hostname used to communicate with the PostgreSQL service container
+        HOST: postgres
+          # The default PostgreSQL port
+        PORT: 5432
+    
+    
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - run: yarn
+    - run: yarn
 
   Run-Lint:
     runs-on: ubuntu-latest
