Button Refactoring Mantine

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,11 +14,30 @@
     "chromatic": "yarn deployStorybook --exit-zero-on-changes"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@hookform/resolvers": "^3.1.0",
+    "@mantine/carousel": "^6.0.16",
+    "@mantine/core": "^6.0.16",
+    "@mantine/dates": "^6.0.16",
+    "@mantine/dropzone": "^6.0.16",
+    "@mantine/form": "^6.0.16",
+    "@mantine/hooks": "^6.0.16",
+    "@mantine/modals": "^6.0.16",
+    "@mantine/notifications": "^6.0.16",
+    "@mantine/nprogress": "^6.0.16",
+    "@mantine/prism": "^6.0.16",
+    "@mantine/spotlight": "^6.0.16",
+    "@mantine/tiptap": "^6.0.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tabler/icons-react": "^2.26.0",
+    "@tiptap/extension-link": "^2.0.4",
+    "@tiptap/react": "^2.0.4",
+    "@tiptap/starter-kit": "^2.0.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "dayjs": "^1.11.9",
+    "embla-carousel-react": "^8.0.0-rc11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "jest-environment-jsdom": "^29.5.0",
