--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,20 +8,20 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "dev": "nest start --watch",
+    "start": "cross-env NODE_ENV=dev nest start",
+    "dev": "cross-env NODE_ENV=dev g nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "cross-env NODE_ENV=testing jest",
+    "test:watch": "cross-env NODE_ENV=testing jest --watch",
+    "test:cov": "cross-env NODE_ENV=testing jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "cross-env NODE_ENV=testing jest --config ./test/jest-e2e.json",
     "typeormSrc": "typeorm-ts-node-esm -d src/typeOrm.config.ts",
     "typeorm": "typeorm-ts-node-esm",
     "run-migration": "yarn typeormSrc -- migration:run",
-    "generate-migration": "yarn typeorm -- migration:generate",
+    "generate-migration": "yarn typeorm -- migration:generate ./src/typeOrm.config.ts",
     "show-migration": "yarn typeormSrc migration:show",
     "create-migration": "yarn typeorm -- migration:create ./src/migrations/mig"
   },
@@ -29,6 +29,8 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.6.2"
